# Text2SQL

./: .gitignore  Makefile  README.md  pyproject.toml  pyproject.toml.bak
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
.github/workflows/: ci.yml  colibri-pages.yml  pages.yml  test-colibri-pages.yml
data/: sample.db  testcases_nyc_duckdb.json  testcases_sample.json
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: agg_avg_salary.sql  schema.yml  stg_departments.sql  stg_employees.sql
dbt/models/nyc/: schema.yml  source.yml  stg_trips_small.sql
dbt/models/nyc/marts/: avg_total_by_passenger.sql  monthly_distance_2015_q1.sql  top_pickup_nta.sql
dbt/seeds/: departments.csv  employees.csv
predictions/: sample_preds.json
scripts/: build_site.py  setup_db.py  smoke_check.py  sync_to_duckdb.py
site/: index.html
site/colibri/: colibri-manifest.json  index.html
site/reports/: nyc_duckdb_report.json
src/deepeval_text2sql_demo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tsql_eval/: cli.py  runner.py
src/tsql_eval/backends/: spark_backend.py  sqlalchemy_backend.py
src/tsql_eval/metrics/: component_match.py  executable_sql.py  execution_accuracy.py  sql_semantic_match.py
tests/: test_metrics.py
tools/: build_sqlite_from_schema.py  predict_ollama_nyc_duckdb.py  spider2_dbt_prepare.py  spider2_lite_snow_prepare.py  spider2_prepare.py
tools/examples/spider2_dbt_sample/task001/: gold.sql  question.txt
