[project]
name = "deepeval-text2sql-demo"
version = "0.3.20"
description = "DeepEval-based Text-to-SQL evaluation with SQLite/Trino/Databricks/Spark, Spider2 prep, dbt, and pytest."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kyungjun-ready", email = "example@example.com" }]

dependencies = [
  "deepeval>=0.20.0",
  "sqlalchemy>=2.0.0",
  "pandas>=2.2.0",
  "sqlglot>=25.0.0",
  "click>=8.1.7",
  "python-dotenv>=1.0.1",
  # Optional backends
  "trino[sqlalchemy]>=0.330.0",
  "databricks-sql-connector>=4.0.0", # Testing + dbt
  "pytest>=8.0.0",
  "dbt-core>=1.7.0",
  "dbt-sqlite>=1.7.0",
  "dbt-duckdb>=1.9,<1.11",
  "dbt-colibri>=0.2.5",
]

[project.scripts]
tsql-eval = "tsql_eval.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.uv]
package = true

[project.optional-dependencies]
trino = ["trino[sqlalchemy]>=0.330.0"]
databricks = ["databricks-sql-connector>=3.3.1"]
spark = ["pyhive>=0.7.0", "thrift>=0.20.0", "thrift-sasl>=0.4.3", "pure-sasl>=0.6.2", "thrift>=0.20.0", "thrift-sasl>=0.4.3"]
dbt = [
  "dbt-core>=1.10,<1.11",
  "dbt-sqlite>=1.9,<1.11",
  "dbt-duckdb>=1.9,<1.11",
]
